--- a/configurations/Sim/TOI-4504_SIM_X042.ini
+++ b/configurations/Sim/TOI-4504_SIM_X042.ini
@@ -62,6 +62,8 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;lmfit = True                 # True for LMfit, False for MCMC
+lmfit_method = powell        # "differential_evolution" "nelder"
+lmfit_max_tt_delta = 1e-4    # LMfit stops when the largest delta between a measured TT and its matched TT is smaller
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
