--- a/configurations/TOI4504/TOI-4504_X047.ini
+++ b/configurations/TOI4504/TOI-4504_X047.ini
@@ -28,13 +28,13 @@ result_dt = 1000             # Real time differences between simulation iteratio
 max_intervall_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = X046                # You can use this comment for example as diagram title in your result plots
+comment = X048               # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 0.001                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -48,7 +48,7 @@ dt = 1e5                     # [s] <float> real time difference between simulati
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [100000]            # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [200000]            # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -72,6 +72,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;lmfit = True                 # True for LMfit, False for MCMC
+;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
