--- a/configurations/TOI4504/TOI-4504_X048.ini
+++ b/configurations/TOI4504/TOI-4504_X048.ini
@@ -48,7 +48,7 @@ dt = 0.001                   # [s] <float> real time difference between simulati
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [200000]            # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [400000]            # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -72,7 +72,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;lmfit = True                 # True for LMfit, False for MCMC
-guifit = True                # True for interactive fit via GUI, False for MCMC
+;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
@@ -144,7 +144,8 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
+;#           value               lower bound       upper bound        sigma
+mass = 932 * m_jup,              922 * m_jup,      942 * m_jup,       25 * m_jup
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
 limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
@@ -172,13 +173,13 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      1.4166 * m_jup,     1 * m_jup,        3 * m_jup,         1.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.3,               0.1
+e =         0.11,               0.10,             0.115,             0.1
 i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.0 * day,         39.5 * day,       42.5 * day,        0.75 * day
-Omega =     0,                  -15,              15,                4
-omega =     93,                 0,                359.99,            120
+P =         41.0 * day,         40.6 * day,       41.4 * day,        0.75 * day
+Omega =     0,                  -1,               3,                 4
+omega =     105,                90,               120,               120
 ma =        -80,                -180,             180,               120
     
     
@@ -187,13 +188,13 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      2.75 * m_jup,       2 * m_jup,        3.5 * m_jup,       1.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.30,              0.1
+e =         0.07,               0.02,             0.12,              0.1
 i =         89.79,            # 89.25,            90.0,              0.2
-P =         82.0 * day,         81.0 * day,       86.0 * day,        1.5 * day
+P =         82.7 * day,         82.0 * day,       83.3 * day,        1.5 * day
 Omega =     0.8,              # -15,              15,                4
-omega =     271,                0,                359.99,            120
+omega =     271,                200,              300,               120
 ma =        173,                0,                359.99,            120
 
 ;[TOI4504e]
