--- a/configurations/TOI4504/TOI-4504_X036.ini
+++ b/configurations/TOI4504/TOI-4504_X036.ini
@@ -25,8 +25,8 @@ rad2deg = 57.29577951308232  # 180 / pi
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-max_intervall_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
-                             # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
+max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+                             # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = X036                # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
