--- a/configurations/TOI4504/TOI-4504_X047_debug.ini
+++ b/configurations/TOI4504/TOI-4504_X047_debug.ini
@@ -22,32 +22,27 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = X024               # You can use this comment for example as diagram title in your result plots
+max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+                             # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
+                             # the search for this particular TT will be aborted. (dt comes from the list dts.)
+comment = X047debug          # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
-[Simulation]                 # Time intervals and time steps of the simulation
+[Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1e4                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-;starts = [2458401.0, 2460660.0, 2460837.0]  # [days] <float> starting times of the intervals for which simulation data will be calculated
-;ends =   [2458401.9, 2460760.0, 2460882.0]  # [days] <float> ending times of the intervals for which simulation data will be calculated
-;dts =    [1000, 1000, 1000]  # [s] <float> real time differences between simulation iterations inside each interval
-;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervals for which simulation data will be calculated
-;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervals for which simulation data will be calculated
-;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each interval
-starts =   [2458400]           # [days] <float>   ending times of the intervals for which simulation data will be calculated
-;starts = [2458728]           # [days] <float> starting times of the intervals for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervals for which simulation data will be calculated
-;ends =   [2458731]           # [days] <float>   ending times of the intervals for which simulation data will be calculated
-dts =    [20000]              # [s] <float> real time differences between simulation iterations inside each interval
+starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [200000]            # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -56,8 +51,8 @@ dts =    [20000]              # [s] <float> real time differences between simula
                              # (// is integer-division)
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
-                             # Because dt can change between intervals, so can the animated velocity of objects in the video.
-;sim_flux_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.csv # <string> When this parameter is provided, the simulated flux will be saved.
+                             # Because dt can change between intervalls, so can the animated velocity of objects in the video.
+;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -70,13 +65,13 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-lmfit = True                 # True for LMfit, False for MCMC
+;lmfit = True                 # True for LMfit, False for MCMC
+;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
 tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/TOI-4504/tt_start_end_locked.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -85,14 +80,13 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 32                 # Number of mcmc chains
-burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 1024               # Number of mcmc chains
+burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
-
-thin_samples = 30            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 10              # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 5             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 250           # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -105,8 +99,8 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxml.mp4  # <string> the resulting video is saved in this file
-frames = 1000                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -144,51 +138,36 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun       # +-0.05
+mass = 971.9965458 * m_jup
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+limb_darkening_1 = 0.4765
 limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
-
-[TOI4504b]
-body_type = planet
-primary =   TOI4504
-color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth
-radius =    2.691 * r_earth
-e =         0
-i =         86.5
-P =         2.42614 * day
-Omega =     0
-omega =     90
-ma =        303.6
-
-
 [TOI4504d]
 body_type = planet
-primary =   TOI4504
+primary =   TOI-4504
 color =     0.01, 0.99, 0.01
-mass =      1.306938619229288 * m_jup,    1.2 * m_jup,      1.4 * m_jup,           1
-radius =    1.012 * r_jup,              #
-e =         0.10527976401695996,          0.08,             0.11,                  1
-i =         88.8,                        # 87,               89.5,                  1
-P =         41.16768686103386 * day,      41.1 * day,       41.25 * day,           1
-Omega =     4.9620750482336655,            0,               6,                     1
-omega =     87.12992034721043,            85,               89,                    1
-ma =        329.9695998776485,           328,               330,                   1
-
-
+mass =      5.193889757 * m_jup
+radius =    1.012 * r_jup
+e =         0.106499004
+i =         89.0
+P =         41.25906328 * day
+Omega =     2.138621745
+omega =     75.67094988
+ma =        17.24071559
+    
 [TOI4504c]
-body_type = planet
-primary =   TOI4504
-color =     0.99, 0.99, 0.01
-mass =      3.5913902107546636 * m_jup,  3.3 * m_jup,       3.8 * m_jup,           1
-radius =    0.9897 * r_jup,             #
-e =         0.051523476358734575,        0.048,             0.058,                 1
-i =         89.79,                      # 89.0,              90.0,                  1
-P =         83.28376891641055 * day,     82.7 * day,        83.6 * day,            1
-Omega =     0.8,                         -3,                9,                     1
-omega =     296.08745527524496,          294,               310,                   1
-ma =        150.0142378614026,           135,               156,                   1
+body_type = planet    
+primary =   TOI-4504    
+color =     0.99, 0.99, 0.01    
+mass =      2.319679516 * m_jup
+radius =    0.9897 * r_jup
+e =         0.012578651
+i =         89.79
+P =         84.88044197 * day
+Omega =     0.8
+omega =     154.9699721
+ma =        290.4063948
+
