--- a/results/mcmc/archive/TT_fit/X024_cd11P_TT15/TOI-4504_X024.ini
+++ b/results/mcmc/archive/TT_fit/X024_cd11P_TT15/TOI-4504_X024.ini
@@ -28,7 +28,7 @@ result_dt = 1000             # Real time differences between simulation iteratio
 comment = xxx                # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
-[Simulation]                 # Time intervalls and time steps of the simulation
+[Simulation]                 # Time intervals and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
@@ -37,15 +37,15 @@ dt = 10000                   # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-;starts = [2458401.0, 2460660.0, 2460837.0]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458401.9, 2460760.0, 2460882.0]  # [days] <float> ending times of the intervalls for which simulation data will be calculated
-;dts =    [1000, 1000, 1000]  # [s] <float> real time differences between simulation iterations inside each intervall
-;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
-starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460882]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [3600]              # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458401.0, 2460660.0, 2460837.0]  # [days] <float> starting times of the intervals for which simulation data will be calculated
+;ends =   [2458401.9, 2460760.0, 2460882.0]  # [days] <float> ending times of the intervals for which simulation data will be calculated
+;dts =    [1000, 1000, 1000]  # [s] <float> real time differences between simulation iterations inside each interval
+;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervals for which simulation data will be calculated
+;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervals for which simulation data will be calculated
+;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each interval
+starts = [2458400]           # [days] <float> starting times of the intervals for which simulation data will be calculated
+ends =   [2460882]           # [days] <float>   ending times of the intervals for which simulation data will be calculated
+dts =    [3600]              # [s] <float> real time differences between simulation iterations inside each interval
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -54,7 +54,7 @@ dts =    [3600]              # [s] <float> real time differences between simulat
                              # (// is integer-division)
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
-                             # Because dt can change between intervalls, so can the animated velocity of objects in the video.
+                             # Because dt can change between intervals, so can the animated velocity of objects in the video.
 ;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
