--- a/configurations/TOI4504/TOI-4504_X048.ini
+++ b/configurations/TOI4504/TOI-4504_X048.ini
@@ -87,13 +87,18 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 1024               # Number of mcmc chains
-burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 32#1024               # Number of mcmc chains
+burn_in = 1#500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
-;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
+moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
+;moves =  (emcee.moves.StretchMove(a=2.0)     )
+;moves =  (emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2)
+;moves =  (emcee.moves.StretchMove()     , 0.6), (emcee.moves.DEMove       (), 0.4)
+;moves =  (emcee.moves.DEMove     ()     , 0.8), (emcee.moves.DESnookerMove(), 0.2)
+;moves = [(emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2), (emcee.moves.StretchMove(a=2.0), 0.2)]
+;moves =  (emcee.moves.StretchMove()           ,  emcee.moves.WalkMove()           ,  emcee.moves.DEMove())
 thin_samples = 5             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 250           # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 10#250           # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -174,14 +179,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     1 * m_jup,        3 * m_jup,         1.5 * m_jup
-radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.11,               0.10,             0.115,             0.1
-i =         89.0,             # 88.0,             89.5,              0.5
-P =         41.0 * day,         40.6 * day,       41.4 * day,        0.75 * day
+mass =      1.4166 * m_jup,     1 * m_jup,        3 * m_jup,         5 * m_jup
+radius =    1.012 * r_jup     #
+e =         0.11,               0.10,             0.115,             0.2
+i =         89.0              #
+P =         41.0 * day,         40.6 * day,       41.4 * day,        2 * day
 Omega =     0,                  -1,               3,                 4
 omega =     105,                90,               120,               120
-ma =        -80,                -180,             180,               120
+ma =        -80,                -180,             180,               200
     
     
 [TOI4504c]
@@ -189,14 +194,14 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      2.75 * m_jup,       2 * m_jup,        3.5 * m_jup,       1.5 * m_jup
-radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.07,               0.02,             0.12,              0.1
-i =         89.79,            # 89.25,            90.0,              0.2
-P =         82.7 * day,         82.0 * day,       83.3 * day,        1.5 * day
-Omega =     0.8,              # -15,              15,                4
-omega =     271,                200,              300,               120
-ma =        173,                0,                359.99,            120
+mass =      2.75 * m_jup,       2 * m_jup,        3.5 * m_jup,       5 * m_jup
+radius =    0.9897 * r_jup,   #
+e =         0.07,               0.02,             0.12,              0.2
+i =         89.79,            #
+P =         82.7 * day,         81.0 * day,       86.0 * day,        10 * day
+Omega =     0.8,              #
+omega =     271,                200,              300,               200
+ma =        173,                0,                359.99,            300
 
 ;[TOI4504e]
 ;body_type = planet
