--- a/configurations/TOI4504/TOI-4504_X048.ini
+++ b/configurations/TOI4504/TOI-4504_X048.ini
@@ -87,18 +87,29 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 32#1024               # Number of mcmc chains
-burn_in = 1#500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 2048               # Number of mcmc chains
+burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
+;moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
 ;moves =  (emcee.moves.StretchMove(a=2.0)     )
+moves =  (emcee.moves.KDEMove()              )
 ;moves =  (emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2)
 ;moves =  (emcee.moves.StretchMove()     , 0.6), (emcee.moves.DEMove       (), 0.4)
 ;moves =  (emcee.moves.DEMove     ()     , 0.8), (emcee.moves.DESnookerMove(), 0.2)
 ;moves = [(emcee.moves.DEMove     ()     , 0.6), (emcee.moves.DESnookerMove(), 0.2), (emcee.moves.StretchMove(a=2.0), 0.2)]
+;moves = [(emcee.moves.DEMove     ()     , 0.01), (emcee.moves.DESnookerMove(), 0.01), (emcee.moves.WalkMove(), 0.98)]
 ;moves =  (emcee.moves.StretchMove()           ,  emcee.moves.WalkMove()           ,  emcee.moves.DEMove())
-thin_samples = 5             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 10#250           # Every chunk_size steps after burn-in phase, results will be saved.
+
+# DEMove: 50% langsamer als StretchMove
+# DESnookerMove: superschnell, ineffektiv?
+# WalkMove: superschnell, ineffektiv?
+# StretchMove: Klassiker
+# RedBlueMove:
+# KDEMove: Use MANY walkers!
+# GaussianMove: braucht covarianz als Argument?!?!
+
+thin_samples = 10             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 200           # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
