--- a/configurations/TOI4504/TOI-4504_X048.ini
+++ b/configurations/TOI4504/TOI-4504_X048.ini
@@ -87,6 +87,8 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
+backend = X048_backend.h5
+;load_backend = True
 walkers = 2048               # Number of mcmc chains
 burn_in = 500              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
