--- a/configurations/TOI4504/TOI-4504_X049.ini
+++ b/configurations/TOI4504/TOI-4504_X049.ini
@@ -23,7 +23,7 @@ rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
-result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
+result_dt = 1.5e5            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
@@ -65,7 +65,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-;lmfit = True                 # True for LMfit, False for MCMC
+lmfit = True                 # True for LMfit, False for MCMC
 lmfit_method = powell
 ;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
