--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -105,7 +105,7 @@ moves =  (emcee.moves.StretchMove(a=2.0)     )
 # GaussianMove: braucht covarianz als Argument?!?!
 
 thin_samples = 1             # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 1               # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 2               # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -185,7 +185,7 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      1.4166 * m_jup,   # 0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.0445,           # 0.0,              0.3,               0.1
 i =         89.0,             # 88.0,             89.5,              0.5
@@ -200,7 +200,7 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      3.7672 * m_jup,   # 0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0320,           # 0.0,              0.30,              0.1
 i =         89.79,            # 89.25,            90.0,              0.2
