--- a/configurations/TOI4504/TOI-4504_X049.ini
+++ b/configurations/TOI4504/TOI-4504_X049.ini
@@ -66,9 +66,9 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 lmfit = True                 # True for LMfit, False for MCMC
-;lmfit_method = powell
+lmfit_method = powell
 ;lmfit_method = differential_evolution
-lmfit_method = nelder
+;lmfit_method = nelder
 ;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
@@ -187,12 +187,12 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      1.4166 * m_jup,     0.5 * m_jup,      4.0 * m_jup,       1.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.0445,             0.0,              0.3,               0.1
 i =         89.0,             # 88.0,             89.5,              0.5
 P =         41.0 * day,         39.0 * day,       43.0 * day,        0.75 * day
-Omega =     0,                  -15,              15,                4
+Omega =     0,                  -3,               6,                 4
 omega =     93,                 0,                359.99,            120
 ma =        -80,                -180,             180,               120
 
@@ -202,7 +202,7 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      1.5 * m_jup
+mass =      3.7672 * m_jup,     1.0 * m_jup,      5.5 * m_jup,      1.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0320,             0.0,              0.30,              0.1
 i =         89.79,            # 89.25,            90.0,              0.2
